<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OMF RC</string>
    <string name="menu_settings">Settings</string>
    <string name="app_notification_id">Resource Controller</string>
    
    <!-- SERVICE -->
    <string name="title_activity_background_service">BackgroundService</string>
    <string name="title_activity_logger_service">LoggerService</string>
    <!-- COLORS -->
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="nitlab_blue">#305086</color>
    
    
    <!-- STYLES -->
   <!--  <style name="SwitchTextAppearance" parent="@android:style/TextAppearance.Holo.Small">
    	<item name="android:textColor">@color/white</item>
	</style>
	-->
    <!-- BUTTONS -->
    <string name="btn_id">RcCtlServiceBtn</string>
    <string name="btn_service_start">RscCtl Start</string>
    <string name="btn_service_stop">RscCtl Stop</string>
	<string name="configure_button">Configure</string>
	<string name="main_menu">Main</string>
	<string name="settings_menu">Settings</string>
	
	<string name="configuration">Configuration</string>
	
	<string name="uid">UID:</string>
	<string name="uri">Server Name:</string>
	
	<string name="radioXMPP">XMPP</string>
    <string name="radioAMQP">AMQP</string>
	
    <string name="logString">Save logs</string>
    
	<string name="hint1">nitos.android.IMEI</string>
	<string name="hint2">nitlab.inf.uth.gr</string>
	
	<string name="nitlab_image">nilab_image</string>
	
	<string name="submit_btn">Submit</string>
</resources>